--- a/index.html
+++ b/index.html
@@ -89,6 +89,37 @@
                 </div>
             </div>
         </div>
+        <section class="row mt-5 project" >
+                   <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <img
+                src="/assets/project3.png"
+                class="img"
+                alt="tonic">
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title menu boldtext" >Tonic</h4>
+                   <h6 class="card-subtitle mb-2 text-muted menu menu-1 " >CANOPY  BACK END DEV  2015</h6>
+                    <p class="card-text"> A daily selection of privately personalized reads; no accounts
+                    or sign-ups required.</p>
+                    <p class="card-text"> Experimental content creation feature that allows users to add
+                      to an existing story over the course of a day wihtout spamming
+                      their friends.</p>
+                      <button type="button" class="btn btn-outline-primary">html .</button>
+                      <button type="button" class="btn btn-outline-primary">javascript</button>
+                      <button type="button" class="btn btn-outline-primary">Css</button><br><br>
+                  <a href="#" class="btn btn-primary">See Project</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </section>
     </main>
 
     <script
