Add contact form

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <img src="/assets/project3.png" class="img" alt="tonic" />
+              <img src="assets/project3.png" class="img" alt="tonic" />
             </div>
           </div>
         </div>
@@ -154,7 +154,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <img src="/assets/project1.png" class="img" alt="tonic" />
+              <img src="assets/project1.png" class="img" alt="tonic" />
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <img src="/assets/project2.png" class="img" alt="tonic" />
+              <img src="assets/project2.png" class="img" alt="tonic" />
             </div>
           </div>
         </div>
@@ -200,7 +200,8 @@
               </h6>
 
               <p class="card-text">
-                A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.
+                A smart assistant to make driving more safe, efficient, and fun
+                by unlocking your most expensive computer: your car.
               </p>
               <span class="badge bg-light text-primary">html .</span>
               <span class="badge bg-light text-primary">javascript</span>
@@ -213,9 +214,51 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <img src="/assets/project4.png" class="img" alt="tonic" />
+              <img src="assets/project4.png" class="img" alt="tonic" />
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="row align-middle mt-5 contactform">
+        <div class="inner-form-container">
+          <h1 class="contact-us-title">Contact us</h1>
+          <p class="contactus">
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. We’d love
+            to help with it
+          </p>
+          <form>
+            <div class="mb-3">
+              <input
+                type="email"
+                class="form-control txts"
+                name="email"
+                placeholder="Enter your email"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <input
+                type="text"
+                class="form-control txts"
+                name="fullname"
+                placeholder="Enter your name"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <textarea
+                class="form-control txts"
+                name="message"
+                required
+                placeholder="Enter message here"
+                rows="5"
+              ></textarea>
+            </div>
+
+            <button type="submit" class="submit">Submit</button>
+          </form>
         </div>
       </section>
     </main>
